--- a/apps/foilsigh/assets/css/utils/_layout.scss
+++ b/apps/foilsigh/assets/css/utils/_layout.scss
@@ -54,7 +54,7 @@
 
   @each $count in map.keys(grid.$columns) {
     @include grid.columns($count) {
-      @if $count == 8 {
+      @if $count == 6 {
         --grid-space: var(--grid-space-wide, #{$space-wide});
       }
       grid-template-columns: repeat($count, 1fr) !important;
